Fix html issues and removed webkit flex roww wrap for safri

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -225,7 +225,7 @@ html,body {
 }
 
 .row-flex-wrap {
-  -webkit-flex-flow: row wrap;
+  /*-webkit-flex-flow: row wrap;*/
     align-content: flex-start;
     flex:0;
 }
